--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 import React, { useState, useEffect, useMemo } from 'react';
-import { Search, Phone, User, Building, Plus, Upload, Trash2, Edit2, Save, X, Download, FileText, Layers, RotateCcw, HelpCircle, Settings, ChevronDown, ChevronUp } from 'lucide-react';
+import { Search, Phone, User, Building, Plus, Upload, Trash2, Edit2, Save, X, Download, Settings, ChevronUp, RotateCcw, HelpCircle } from 'lucide-react';
 
-// 預設資料
+// 預設資料 (已整合 20251209 PDF 內容)
 const DEFAULT_DATA = [
+  // 業本部
   { id: '300', unit: '業本部', ext: '300', name: '董事長', note: '' },
   { id: '301', unit: '業本部', ext: '301', name: '邱靜怡', note: '' },
   { id: '302', unit: '業本部', ext: '302', name: '劉伊祐', note: '#6940' },
@@ -18,6 +19,7 @@ const DEFAULT_DATA = [
   { id: '351', unit: '業本部', ext: '351', name: '會議室', note: '' },
   { id: '352', unit: '業本部', ext: '352', name: '會客室', note: '' },
   
+  // 策略企劃部
   { id: '200', unit: '策略企劃部', ext: '200', name: '王總經理', note: '' },
   { id: '202', unit: '策略企劃部', ext: '202', name: '王絮平', note: '' },
   { id: '203', unit: '策略企劃部', ext: '203', name: '唐育崧', note: '' },
@@ -25,11 +27,13 @@ const DEFAULT_DATA = [
   { id: '207', unit: '策略企劃部', ext: '207', name: '王慈苑', note: '' },
   { id: '208', unit: '策略企劃部', ext: '208', name: '韋俊斌', note: '' },
 
+  // 資訊室
   { id: '230', unit: '資訊室', ext: '230', name: '李炯明', note: '' },
   { id: '231', unit: '資訊室', ext: '231', name: '鄭凱勻', note: '' },
   { id: '232', unit: '資訊室', ext: '232', name: '李佳鴻', note: '' },
   { id: '233', unit: '資訊室', ext: '233', name: '資訊室機房', note: '' },
 
+  // 研發部
   { id: '500', unit: '研發部', ext: '500', name: '謝俊傑', note: '#6900' },
   { id: '501', unit: '研發部', ext: '501', name: '潘亭溱', note: '' },
   { id: '502', unit: '研發部', ext: '502', name: '潘淑貞', note: '' },
@@ -51,19 +55,25 @@ const DEFAULT_DATA = [
   { id: '573', unit: '研發部', ext: '573', name: '盧義雄', note: '#6915' },
   { id: '575', unit: '研發部', ext: '575', name: '5樓EI實驗室', note: '' },
 
+  // 資材課
   { id: '101', unit: '資材課', ext: '101', name: '楊正堂', note: '#6705' },
   { id: '102', unit: '資材課', ext: '102', name: '蔡政穎/陳明毅', note: '' },
   { id: '103', unit: '資材課', ext: '103', name: '郭鈺溱', note: '' },
   { id: '105', unit: '資材課', ext: '105', name: '程讌荀', note: '' },
 
+  // 生產部
   { id: '610', unit: '生產部現場', ext: '610', name: '生一課控制室', note: '' },
   { id: '611', unit: '生產部現場', ext: '611', name: '生一課採樣室', note: '' },
   { id: '620', unit: '生產部現場', ext: '620', name: '生二課控制室', note: '' },
   { id: '621', unit: '生產部現場', ext: '621', name: '生二課採樣室', note: '' },
   { id: '630', unit: '生產部現場', ext: '630', name: '生三課控制室', note: '' },
+  { id: '751', unit: '生產部現場', ext: '751', name: '吳政憲/陸重志', note: '#6963/#6979' },
+  { id: '752', unit: '生產部現場', ext: '752', name: '林仁揚/吳琬婷', note: '#964' },
 
+  // 營業部
   { id: '210', unit: '營業部-內銷', ext: '210', name: '蘇信龍', note: '#6880' },
   
+  // 外部與公設
   { id: '901', unit: '外部單位', ext: '#6 110', name: '永安分駐所', note: '' },
   { id: '902', unit: '外部單位', ext: '#6 119', name: '永安消防隊', note: '' },
   { id: '903', unit: '外部單位', ext: '07-6212895', name: '永安服務中心', note: '' },
@@ -71,7 +81,7 @@ const DEFAULT_DATA = [
   { id: '905', unit: '公共設施', ext: '695', name: '成品倉庫貨梯', note: '' },
 ];
 
-const CompanyDirectory = () => {
+const App = () => {
   const [contacts, setContacts] = useState([]);
   const [searchTerm, setSearchTerm] = useState('');
   const [selectedUnit, setSelectedUnit] = useState(null);
@@ -79,7 +89,7 @@ const CompanyDirectory = () => {
   const [editingContact, setEditingContact] = useState(null);
   const [encoding, setEncoding] = useState('big5');
   const [showFormatHint, setShowFormatHint] = useState(false);
-  const [isManageMode, setIsManageMode] = useState(false); // 控制管理面板顯示
+  const [isManageMode, setIsManageMode] = useState(false); 
   
   useEffect(() => {
     const savedData = localStorage.getItem('companyContacts');
@@ -101,7 +111,6 @@ const CompanyDirectory = () => {
     return units.sort();
   }, [contacts]);
 
-  // 解析 CSV
   const parseCSV = (text) => {
     const lines = text.split('\n');
     const newContacts = [];
@@ -254,7 +263,6 @@ const CompanyDirectory = () => {
 
   return (
     <div className="min-h-screen bg-slate-50 font-sans text-slate-800 pb-12">
-      {/* Header - 極簡化 */}
       <header className="bg-blue-600 text-white shadow-md sticky top-0 z-20">
         <div className="max-w-6xl mx-auto px-4 py-3">
           <div className="flex justify-between items-center mb-3">
@@ -275,7 +283,6 @@ const CompanyDirectory = () => {
             </button>
           </div>
 
-          {/* Search Bar - 全寬 */}
           <div className="relative w-full">
             <div className="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
               <Search className="h-4 w-4 text-blue-200" />
@@ -299,7 +306,6 @@ const CompanyDirectory = () => {
         </div>
       </header>
 
-      {/* 管理面板 (可收合) */}
       <div className={`bg-white border-b border-slate-200 overflow-hidden transition-all duration-300 ease-in-out ${isManageMode ? 'max-h-96 opacity-100' : 'max-h-0 opacity-0'}`}>
         <div className="max-w-6xl mx-auto px-4 py-4 space-y-4">
            <h3 className="text-sm font-bold text-slate-500 uppercase tracking-wider flex items-center gap-2">
@@ -341,7 +347,6 @@ const CompanyDirectory = () => {
                </button>
            </div>
            
-           {/* 格式提示區塊 - 移到管理面板內 */}
            {showFormatHint && (
             <div className="mt-4 bg-blue-50 border border-blue-200 rounded-lg p-4 text-sm text-slate-700 animate-in fade-in slide-in-from-top-2">
                <p className="mb-2 font-bold text-blue-800">💡 建議欄位順序 (4欄):</p>
@@ -353,7 +358,6 @@ const CompanyDirectory = () => {
 
       <main className="max-w-6xl mx-auto px-4 pt-4">
         
-        {/* 部門篩選 - 類似 Tab 的滑動設計 */}
         {allUnits.length > 0 && (
           <div className="mb-6 overflow-x-auto pb-2 -mx-4 px-4 scrollbar-hide">
             <div className="flex space-x-2">
@@ -387,7 +391,6 @@ const CompanyDirectory = () => {
           </div>
         )}
 
-        {/* 篩選狀態提示 */}
         {(selectedUnit || searchTerm) && (
           <div className="flex items-center justify-between mb-4 text-sm text-slate-500 px-1">
             <div className="flex items-center gap-2">
@@ -409,12 +412,10 @@ const CompanyDirectory = () => {
           </div>
         )}
 
-        {/* Contact Grid */}
         <div className="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-3">
           {filteredContacts.length > 0 ? (
             filteredContacts.map((contact) => (
               <div key={contact.id} className="bg-white rounded-lg shadow-sm border border-slate-200 p-3.5 flex items-center justify-between hover:shadow-md transition duration-200 group relative">
-                 {/* 編輯/刪除按鈕 - 只要滑鼠移過去就會出現 (opacity-0 -> 100) */}
                  <div className="absolute top-2 right-2 flex gap-1 opacity-0 group-hover:opacity-100 transition-opacity duration-200 bg-white/90 backdrop-blur-sm rounded-lg p-1 shadow-sm border border-slate-100">
                     <button 
                       onClick={() => openEditModal(contact)} 
@@ -463,7 +464,6 @@ const CompanyDirectory = () => {
         </div>
       </main>
 
-      {/* Modal */}
       {isModalOpen && (
         <ContactModal 
           isOpen={isModalOpen} 
@@ -477,7 +477,6 @@ const CompanyDirectory = () => {
   );
 };
 
-// Modal Component - 保持不變
 const ContactModal = ({ isOpen, onClose, onSave, initialData, existingUnits = [] }) => {
   const [formData, setFormData] = useState({
     unit: '',
@@ -595,4 +594,4 @@ const ContactModal = ({ isOpen, onClose, onSave, initialData, existingUnits = []
   );
 };
 
-export default CompanyDirectory;
+export default App;
