--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <script type="text/babel">
         const { useState, useEffect, useMemo } = React;
 
-        const APP_VERSION = "v1.4 (Clean Log)";
+        const APP_VERSION = "v1.5 (Log Fixed)";
 
         // --- Firebase 設定 ---
         const firebaseConfig = {
@@ -468,30 +468,8 @@
             );
         };
 
-        const ContactModal = ({ isOpen, onClose, onSave, initialData, existingUnits = [] }) => {
-            const [formData, setFormData] = useState({ unit: '', ext: '', name: '', note: '' });
-            useEffect(() => { if (initialData) { setFormData(initialData); } else { setFormData({ unit: '', ext: '', name: '', note: '' }); } }, [initialData]);
-            const handleSubmit = (e) => { e.preventDefault(); onSave({ ...formData, id: initialData?.id }); };
-            return (
-                <div className="fixed inset-0 bg-black/50 flex items-center justify-center p-4 z-50 backdrop-blur-sm">
-                    <div className="bg-white rounded-2xl w-full max-w-md shadow-2xl overflow-hidden animate-in fade-in zoom-in duration-200">
-                        <div className="px-6 py-4 border-b border-slate-100 flex justify-between items-center bg-slate-50"><h3 className="font-bold text-lg text-slate-800">{initialData ? '編輯聯絡人' : '新增聯絡人'}</h3><button onClick={onClose} type="button" className="text-slate-400 hover:text-slate-600"><X className="w-5 h-5" /></button></div>
-                        <form onSubmit={handleSubmit} className="p-6 space-y-4">
-                        <div><label className="block text-sm font-medium text-slate-700 mb-1">部門 / 單位</label><div className="relative"><div className="absolute left-3 top-1/2 -translate-y-1/2 w-4 h-4 text-slate-400"><Building className="w-4 h-4" /></div><input required type="text" list="units-datalist" className="w-full pl-10 pr-4 py-2 border border-slate-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition" placeholder="例如：資訊室" value={formData.unit} onChange={e => setFormData({...formData, unit: e.target.value})} /><datalist id="units-datalist">{existingUnits.map(u => <option key={u} value={u} />)}</datalist></div></div>
-                        <div className="grid grid-cols-2 gap-4"><div><label className="block text-sm font-medium text-slate-700 mb-1">使用人姓名</label><div className="relative"><div className="absolute left-3 top-1/2 -translate-y-1/2 w-4 h-4 text-slate-400"><User className="w-4 h-4" /></div><input required type="text" className="w-full pl-10 pr-4 py-2 border border-slate-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition" placeholder="姓名" value={formData.name} onChange={e => setFormData({...formData, name: e.target.value})} /></div></div><div><label className="block text-sm font-medium text-slate-700 mb-1">分機號碼</label><div className="relative"><div className="absolute left-3 top-1/2 -translate-y-1/2 w-4 h-4 text-slate-400"><Phone className="w-4 h-4" /></div><input required type="text" className="w-full pl-10 pr-4 py-2 border border-slate-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition" placeholder="例如：300" value={formData.ext} onChange={e => setFormData({...formData, ext: e.target.value})} /></div></div></div>
-                        <div><label className="block text-sm font-medium text-slate-700 mb-1">備註 (選填)</label><textarea className="w-full px-4 py-2 border border-slate-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition" rows="2" placeholder="例如：手機號碼、職務代理人..." value={formData.note} onChange={e => setFormData({...formData, note: e.target.value})}></textarea></div>
-                        <div className="pt-4 flex justify-end gap-3"><button type="button" onClick={onClose} className="px-4 py-2 text-slate-600 hover:bg-slate-100 rounded-lg transition">取消</button><button type="submit" className="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 shadow-md hover:shadow-lg transition flex items-center gap-2"><Save className="w-4 h-4" /> 儲存</button></div>
-                        </form>
-                    </div>
-                </div>
-            );
-        };
-
         const root = ReactDOM.createRoot(document.getElementById('root'));
         root.render(<App />);
     </script>
 </body>
-</html>```我做了一些變更：移除了會造成 Console 報錯的程式碼。如果您的 `icon.png` 仍然沒有顯示，請確認：
-1. `icon.png` 確實有上傳到 GitHub。
-2. 檔名大小寫完全正確。
-3. 檔案放在與 `index.html` 同一層目錄。
+</html>
