--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <script type="text/babel">
         const { useState, useEffect, useMemo } = React;
 
-        const APP_VERSION = "v1.7 (Duplicate Cleaner)";
+        const APP_VERSION = "v1.8 (Grid Layout)";
 
         // --- Firebase 設定 ---
         const firebaseConfig = {
